--- a/nerdlets/nerdpack-layout-standard-nerdlet/styles.scss
+++ b/nerdlets/nerdpack-layout-standard-nerdlet/styles.scss
@@ -55,7 +55,8 @@
   overflow: scroll;
   padding: 16px;
   
-  &:first-child {
+  &:first-child,
+  &:nth-child(2) {
     padding-right: 0px;
   }
 }
@@ -138,7 +139,7 @@ p.empty-state-description {
   font-size: 14px;
   line-height: 20px;
   color: #8e9494;
-  padding: 0 20%;
+  padding: 0 10%;
 }
 
 code {
